...
                android:id="@+id/swipe_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <com.aosdp.darkfocus.web.IWebView
                    android:id="@+id/webview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbarThumbVertical="@drawable/scrollbar_thumb"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            </android.support.v4.widget.SwipeRefreshLayout>
...
